# hero_assistant

./: .gitignore  README.md  mapping.md
Point-LIO/: CMakeLists.txt  README.md  package.xml
Point-LIO/config/: pointlio.yaml
Point-LIO/include/: common_lib.h
Point-LIO/include/IKFoM/IKFoM_toolkit/esekfom/: esekfom.hpp
Point-LIO/launch/: pointlio.launch.py
Point-LIO/rviz_cfg/: loam_livox.rviz
Point-LIO/src/: Estimator.cpp  Estimator.h  IMU_Processing.hpp  laserMapping.cpp  laserMapping.h  parameters.cpp  parameters.h  preprocess.cpp
config_dynamic_modifier/: CMakeLists.txt  POLYGON_MODE_GUIDE.md  QUICK_START_GUIDE.md  README.md  SUMMARY.md  package.xml
config_dynamic_modifier/config/: config_dynamic_modifier.yaml
config_dynamic_modifier/include/config_dynamic_modifier/: config_dynamic_modifier.hpp  gui_plugin.hpp
config_dynamic_modifier/launch/: config_dynamic_modifier.launch.py
config_dynamic_modifier/scripts/: example_usage.py  quick_start.sh  test_config_modifier.py
config_dynamic_modifier/src/: config_dynamic_modifier_node.cpp
nav2_custom_costmap_plugin/: CMakeLists.txt  README.md  custom_layer.xml  package.xml
nav2_custom_costmap_plugin/include/nav2_custom_costmap_plugin/: custom_layer.hpp
nav2_custom_costmap_plugin/src/: custom_layer.cpp
obstacle_segmentation_tc/: CMakeLists.txt  README.md  package.xml
obstacle_segmentation_tc/config/: obstacle_segmentation.yaml
obstacle_segmentation_tc/include/obstacle_segmentation/: obstacle_segmentation.hpp
obstacle_segmentation_tc/launch/: obstacle_segmentation.launch.py
obstacle_segmentation_tc/src/: obstacle_segmentation.cpp  obstacle_segmentation_node.cpp
rm_interfaces/: CMakeLists.txt  README.md  package.xml
rm_interfaces/msg/Receive/: NavigationCommand.msg  Robotstatus.msg
rm_interfaces/msg/Transmit/: DistanceInfo.msg  SelfPosition.msg
rm_interfaces/srv/: CalculateDistance.srv
robot_behavior_tree/robot_bt_navigator/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
robot_behavior_tree/robot_bt_navigator/src/navigators/: navigate_to_pose.cpp
robot_behaviors/: CMakeLists.txt  package.xml
robot_behaviors/include/: keep_away_from_obstacles_action.hpp
robot_behaviors/plugins/: keep_away_from_obstacles.cpp
robot_behaviors/src/: keep_away_from_obstacles.cpp  keep_away_from_obstacles_action.cpp  keep_away_from_obstacles_sever_node.cpp
robot_bring_up/: CMakeLists.txt  README.md  package.xml
robot_bring_up/config/: betterRvizConfig.rviz  safeinit.yaml  safeinitblue.yaml  safeinitred.yaml  sentry.yaml
robot_bring_up/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  pcd2pgm.launch.py  safeinit.launch.py  sentry.launch.py  serial.launch.py  zuihouinit.launch.py
robot_bring_up/maps/: 3502.yaml
robot_bt_navigator/: CMakeLists.txt  package.xml
robot_bt_navigator/behavior_trees/: follow_point.xml  navigate_to_pose_w_replanning_and_recovery.xml
robot_bt_navigator/src/navigators/: navigate_to_pose.cpp
robot_mapping/merge_pcd/: CMakeLists.txt
robot_mapping/merge_pcd/include/merge_pcd/: merge_pcd.hpp
robot_mapping/merge_pcd/launch/: merge_pcd.launch.py
robot_mapping/merge_pcd/src/: merge_pcd.cpp  merge_pcd_node.cpp
robot_mapping/pcd2pgm/: CMakeLists.txt
robot_mapping/pcd2pgm/include/pcd2pgm/: pcd2pgm.hpp
robot_mapping/pcd2pgm/launch/: pcd2pgm.launch.py
robot_mapping/pcd2pgm/src/: pcd2pgm.cpp  pcd2pgm_node.cpp
robot_msgs/: CMakeLists.txt
robot_navigation/: CMakeLists.txt  README.md  package.xml
robot_navigation/src/: navigation_manager.cpp
robot_serial/: CMakeLists.txt  README.md  package.xml
robot_serial/include/serial_pro/: listener.h  robot_message.h  robot_serial.h  sentry_msg.h
robot_serial/src/: robot_serial.cpp
sentry_strategy_service/: CMakeLists.txt  README.md  package.xml
sentry_strategy_service/include/sentry_strategy_service/: sentry_strategy_service.hpp
sentry_strategy_service/launch/: sentry_strategy_service.launch.py
sentry_strategy_service/src/: sentry_strategy_service.cpp  sentry_strategy_service_node.cpp
teb_local_planner/costmap_converter/: README.md
