<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_custom_costmap_plugin</name>
  <version>1.0.0</version>
  <description>基于ROS2 Navigation2的自定义代价地图层插件，支持运行时动态移除指定多边形区域的障碍物。</description>
  <maintainer email="autism2484684043@163.com">cmyhj</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/custom_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
